--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.3.1",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "tailwindcss": "^4.1.4"
