--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/netlify": "^6.3.1",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
+    "canvas": "^3.1.0",
     "tailwindcss": "^4.1.4"
   }
 }
