--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.3.1",
+    "@astrojs/react": "^4.2.7",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "astro": "^5.7.5",
     "canvas": "^3.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.4"
   }
 }
